# voxel_engine

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  camera.cpp  camera.h  global.h  globalstate.h  main.cpp
Level/: Platform.cpp  Platform.h
Level/Chunk/: Chunk.cpp  Chunk.h
Level/Model/: Mesh.h  Model.cpp
Level/Model/Types/: Voxel.cpp  Voxel.h
Level/Octree/: BoundingVolume.h  Memorypool.h  Octree.cpp  Octree.h
Level/Quadtree/: Quadtree.cpp  Quadtree.h
Rendering/: Culling.cpp  Culling.h  Renderer.cpp  Renderer.h
camera/: Culling.cpp  Culling.h  camera.cpp  camera.h  culling.cpp  culling.h
core/: state.h
core/io/: key_mapping.h  window_handler.cpp  window_handler.h
core/level/: platform.cpp  platform.h  presenter.cpp  presenter.h
core/level/chunk/: chunk.cpp  chunk.h  chunk_renderer.cpp  chunk_renderer.h  chunk_segment.cpp  chunk_segment.h
core/level/chunk/generation/: biome.cpp  biome.h  generation.cpp  generation.h
core/level/chunk_data_structure/: node.cpp  node.h  node_inline.h  octree.cpp  octree.h  voxel_data_layout.h
core/level/model/: mesh.cpp  mesh.h  voxel.cpp  voxel.h
core/level/tiles/: tile.cpp  tile.h  tile_manager.cpp  tile_manager.h
core/level/tiles/impl/: cobblestone.cpp  cobblestone.h  dirt.cpp  dirt.h  grass.cpp  grass.h  stone.cpp  stone_brick.cpp  stone_brick.h  water.cpp  water.h
core/memory/: arena_allocator.cpp  arena_allocator.h  linear_allocator.h  linear_allocator_threadsafe.h  memory.h
core/opengl/: opengl_key_map.cpp  opengl_key_map.h  opengl_verify.h  opengl_window.cpp  opengl_window.h
core/rendering/: framebuffer.cpp  framebuffer.h  interface.cpp  interface.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skybox_renderer.cpp  skybox_renderer.h
core/rendering/shaders/: fragment_shader.glsl  vertex_shader.glsl
core/rendering/shaders/atmosphere_pass/: fragment_debug.glsl  fragment_shader.glsl  vertex_debug.glsl  vertex_shader.glsl
core/rendering/shaders/depth_map_pass/: fragment_shader.glsl  geometry_shader.glsl  vertex_shader.glsl
core/rendering/shaders/geometry_pass/: fragment_shader.glsl  vertex_shader.glsl
core/rendering/shaders/shading_pass/: fragment_shader.glsl  vertex_shader.glsl
core/rendering/shaders/ssao_blur_pass/: fragment_shader.glsl
core/rendering/shaders/ssao_pass/: fragment_shader.glsl  vertex_shader.glsl
core/rendering/shaders/ssr_blur_pass/: fragment_shader.glsl
core/rendering/shaders/ssr_pass/: fragment_shader.glsl
core/rendering/shaders/water_pass/: fragment_shader.glsl  vertex_shader.glsl
core/threading/: scheduled_executor.h  spmc_queue.h  thread_pool.h  thread_safe_queue.h
level/: Platform.cpp  Platform.h  platform.cpp  platform.h  presenter.cpp  presenter.h
level/chunk/: Chunk.cpp  Chunk.h  chunk.cpp  chunk.h  chunk_manager.h  chunk_segment.cpp  chunk_segment.h
level/model/: Mesh.cpp  Mesh.h  Model.cpp  mesh.h  model.cpp
level/model/Types/: Voxel.cpp  Voxel.h  voxel.cpp  voxel.h
level/model/tile/: tile_atlas.cpp  tile_atlas.h
level/model/tile/explicit/: dirt.cpp
level/model/tile/meshes/: tile.cpp  tile.h
level/octree/: BoundingVolume.h  GreedyMeshing.cpp  Memorypool.cpp  Octree.cpp  Octree.h  boundingVolume.h  greedyMeshing.cpp  memorypool.cpp  memorypool.h  node.cpp  node.h  node_inline.h  octree.cpp  octree.h
lib/glad-2/include/glad/: glad.h
lib/glad-2/src/: glad.c
lib/glfw-3.3.9/docs/: Doxyfile.in
lib/glfw-3.3.9/docs/html/: jquery.js
lib/glfw-3.3.9/examples/: particles.c
lib/glm/: CMakeLists.txt  ext.hpp
lib/glm/detail/: setup.hpp  type_mat2x2.inl  type_mat3x3.inl  type_mat4x4.inl  type_quat.hpp  type_quat.inl
lib/glm/ext/: scalar_ulp.inl
lib/glm/gtc/: packing.inl
lib/glm/gtx/: component_wise.hpp  dual_quaternion.hpp  euler_angles.hpp  io.hpp  matrix_decompose.hpp  matrix_factorisation.hpp  matrix_interpolation.hpp  number_precision.hpp  pca.hpp
rendering/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  interface.cpp  interface.h  renderer.cpp  renderer.h  shader.cpp  shader.h
rendering/shaders/: fragment_shader.glsl  vertex_shader.glsl
shaders/: vertex_shader.glsl
threading/: scheduled_executor.h  thread.h  thread_pool.h  thread_safe_queue.h  ticked_executor.h
util/: aabb.h  aabb_ray_intersection.cpp  aabb_ray_intersection.h  aliases.h  assert.h  atomic_shared_ptr.h  bin_file.h  binary_conversion.h  camera.cpp  camera.h  collidable.h  color.h  culling.cpp  culling.h  defines.h  indices_generator.h  interactable.h  keymap.h  log.cpp  log.h  moveable.h  observable.h  observer.h  player.cpp  player.h  reflections.h  renderable.h  result.h  singleton.h  static_renderable.h  stb_image.cpp  sun.cpp  sun.h  tagged_ptr.h  tickable.h  time.cpp  time.h  traits.h  updateable.h
